(efficiencies) Included the missing global bool for the trigger studies

--- a/doc/doc_efficiencies/man/man3/specialAna.3
+++ b/doc/doc_efficiencies/man/man3/specialAna.3
@@ -213,6 +213,9 @@ Inherits AnalysisProcess\&.
 .RI "string const \fBm_TauType\fP"
 .br
 .ti -1c
+.RI "bool \fBdoTriggerStudies\fP"
+.br
+.ti -1c
 .RI "const std::string \fBparticles\fP [4] = {'Ele', 'Muon', 'Tau', 'MET'}"
 .br
 .ti -1c
@@ -952,133 +955,137 @@ Referenced by analyseEvent()\&.
 .SS "bool specialAna::b_13TeV"
 
 .PP
-Definition at line 169 of file specialAna\&.hh\&.
+Definition at line 170 of file specialAna\&.hh\&.
 .PP
 Referenced by Check_Muo_ID(), Check_Tau_ID(), FindResonance(), Get_Truth_match(), getPtHat(), initEvent(), tail_selector(), and TriggerSelector()\&.
 .SS "bool specialAna::b_14TeV"
 
 .PP
-Definition at line 168 of file specialAna\&.hh\&.
+Definition at line 169 of file specialAna\&.hh\&.
 .SS "bool specialAna::b_8TeV"
 
 .PP
-Definition at line 170 of file specialAna\&.hh\&.
+Definition at line 171 of file specialAna\&.hh\&.
 .PP
 Referenced by Check_Muo_ID(), Check_Tau_ID(), FindResonance(), Get_Truth_match(), getPtHat(), initEvent(), tail_selector(), and TriggerSelector()\&.
 .SS "bool specialAna::b_emu"
 
 .PP
-Definition at line 172 of file specialAna\&.hh\&.
+Definition at line 173 of file specialAna\&.hh\&.
 .PP
 Referenced by GenSelector(), and KinematicsSelector()\&.
 .SS "bool specialAna::b_etau"
 
 .PP
-Definition at line 173 of file specialAna\&.hh\&.
+Definition at line 174 of file specialAna\&.hh\&.
 .PP
 Referenced by GenSelector(), and KinematicsSelector()\&.
 .SS "bool specialAna::b_etaue"
 
 .PP
-Definition at line 175 of file specialAna\&.hh\&.
+Definition at line 176 of file specialAna\&.hh\&.
 .PP
 Referenced by GenSelector(), and KinematicsSelector()\&.
 .SS "bool specialAna::b_etaumu"
 
 .PP
-Definition at line 176 of file specialAna\&.hh\&.
+Definition at line 177 of file specialAna\&.hh\&.
 .PP
 Referenced by GenSelector(), and KinematicsSelector()\&.
 .SS "bool specialAna::b_mutau"
 
 .PP
-Definition at line 174 of file specialAna\&.hh\&.
+Definition at line 175 of file specialAna\&.hh\&.
 .PP
 Referenced by GenSelector(), and KinematicsSelector()\&.
 .SS "bool specialAna::b_mutaue"
 
 .PP
-Definition at line 177 of file specialAna\&.hh\&.
+Definition at line 178 of file specialAna\&.hh\&.
 .PP
 Referenced by GenSelector(), and KinematicsSelector()\&.
 .SS "bool specialAna::b_mutaumu"
 
 .PP
-Definition at line 178 of file specialAna\&.hh\&.
+Definition at line 179 of file specialAna\&.hh\&.
 .PP
 Referenced by GenSelector(), and KinematicsSelector()\&.
 .SS "vector< pxl::Particle* >* specialAna::BJetList"
 
 .PP
-Definition at line 155 of file specialAna\&.hh\&.
+Definition at line 156 of file specialAna\&.hh\&.
 .PP
 Referenced by getHT(), and initEvent()\&.
 .SS "map< string, int > specialAna::channel_stages"
 
 .PP
-Definition at line 188 of file specialAna\&.hh\&.
+Definition at line 189 of file specialAna\&.hh\&.
 .PP
 Referenced by channel_writer()\&.
 .SS "const Tools::MConfig specialAna::config_"
 
 .PP
-Definition at line 130 of file specialAna\&.hh\&.
+Definition at line 131 of file specialAna\&.hh\&.
 .PP
 Referenced by tail_selector()\&.
 .SS "TString specialAna::d_mydisc[66]"
 
 .PP
-Definition at line 121 of file specialAna\&.hh\&.
+Definition at line 122 of file specialAna\&.hh\&.
 .SS "TString specialAna::d_mydiscmu[6]"
 
 .PP
-Definition at line 127 of file specialAna\&.hh\&.
+Definition at line 128 of file specialAna\&.hh\&.
+.SS "bool specialAna::doTriggerStudies"
+
+.PP
+Definition at line 116 of file specialAna\&.hh\&.
 .SS "vector< pxl::Particle* >* specialAna::EleList"
 
 .PP
-Definition at line 149 of file specialAna\&.hh\&.
+Definition at line 150 of file specialAna\&.hh\&.
 .PP
 Referenced by analyseEvent(), endEvent(), FillSystematicsUpDown(), initEvent(), and KinematicsSelector()\&.
 .SS "vector< pxl::Particle* >* specialAna::EleListGen"
 
 .PP
-Definition at line 160 of file specialAna\&.hh\&.
+Definition at line 161 of file specialAna\&.hh\&.
 .PP
 Referenced by endEvent(), and initEvent()\&.
 .SS "map< string, \fBCuts\fP > specialAna::emu_cut_cfgs"
 
 .PP
-Definition at line 180 of file specialAna\&.hh\&.
+Definition at line 181 of file specialAna\&.hh\&.
 .PP
 Referenced by Init_emu_cuts(), and KinematicsSelector()\&.
 .SS "map< string, \fBCuts\fP > specialAna::etau_cut_cfgs"
 
 .PP
-Definition at line 181 of file specialAna\&.hh\&.
+Definition at line 182 of file specialAna\&.hh\&.
 .PP
 Referenced by Init_etau_cuts(), and KinematicsSelector()\&.
 .SS "map< string, \fBCuts\fP > specialAna::etaue_cut_cfgs"
 
 .PP
-Definition at line 183 of file specialAna\&.hh\&.
+Definition at line 184 of file specialAna\&.hh\&.
 .PP
 Referenced by Init_etaue_cuts(), and KinematicsSelector()\&.
 .SS "map< string, \fBCuts\fP > specialAna::etaumu_cut_cfgs"
 
 .PP
-Definition at line 184 of file specialAna\&.hh\&.
+Definition at line 185 of file specialAna\&.hh\&.
 .PP
 Referenced by Init_etaumu_cuts(), and KinematicsSelector()\&.
 .SS "double specialAna::event_weight"
 
 .PP
-Definition at line 208 of file specialAna\&.hh\&.
+Definition at line 209 of file specialAna\&.hh\&.
 .PP
 Referenced by FillControllHistos(), initEvent(), and KinematicsSelector()\&.
 .SS "int specialAna::events_"
 
 .PP
-Definition at line 146 of file specialAna\&.hh\&.
+Definition at line 147 of file specialAna\&.hh\&.
 .PP
 Referenced by initEvent()\&.
 .SS "TFile* specialAna::file1"
@@ -1090,35 +1097,35 @@ Referenced by channel_writer(), and endJob()\&.
 .SS "vector< pxl::Particle* >* specialAna::GammaList"
 
 .PP
-Definition at line 152 of file specialAna\&.hh\&.
+Definition at line 153 of file specialAna\&.hh\&.
 .PP
 Referenced by endEvent(), and initEvent()\&.
 .SS "vector< pxl::Particle* >* specialAna::GammaListGen"
 
 .PP
-Definition at line 163 of file specialAna\&.hh\&.
+Definition at line 164 of file specialAna\&.hh\&.
 .PP
 Referenced by endEvent(), and initEvent()\&.
 .SS "bool specialAna::isOldPXLFile"
 
 .PP
-Definition at line 123 of file specialAna\&.hh\&.
+Definition at line 124 of file specialAna\&.hh\&.
 .SS "vector< pxl::Particle* >* specialAna::JetList"
 
 .PP
-Definition at line 154 of file specialAna\&.hh\&.
+Definition at line 155 of file specialAna\&.hh\&.
 .PP
 Referenced by calc_lep_fraction(), endEvent(), getHT(), and initEvent()\&.
 .SS "vector< pxl::Particle* >* specialAna::JetListGen"
 
 .PP
-Definition at line 165 of file specialAna\&.hh\&.
+Definition at line 166 of file specialAna\&.hh\&.
 .PP
 Referenced by endEvent(), and initEvent()\&.
 .SS "bool specialAna::keep_data_event"
 
 .PP
-Definition at line 205 of file specialAna\&.hh\&.
+Definition at line 206 of file specialAna\&.hh\&.
 .PP
 Referenced by endEvent(), initEvent(), and KinematicsSelector()\&.
 .SS "string const specialAna::m_BJets_algo"
@@ -1130,15 +1137,15 @@ Referenced by initEvent()\&.
 .SS "const std::string specialAna::m_channel"
 
 .PP
-Definition at line 129 of file specialAna\&.hh\&.
+Definition at line 130 of file specialAna\&.hh\&.
 .SS "const std::string specialAna::m_cutdatafile"
 
 .PP
-Definition at line 125 of file specialAna\&.hh\&.
+Definition at line 126 of file specialAna\&.hh\&.
 .SS "const std::string specialAna::m_dataPeriod"
 
 .PP
-Definition at line 128 of file specialAna\&.hh\&.
+Definition at line 129 of file specialAna\&.hh\&.
 .PP
 Referenced by initEvent()\&.
 .SS "pxl::EventView* specialAna::m_GenEvtView"
@@ -1180,143 +1187,143 @@ Referenced by initEvent(), and TriggerSelector()\&.
 .SS "const vector< string > specialAna::m_trigger_string"
 
 .PP
-Definition at line 126 of file specialAna\&.hh\&.
+Definition at line 127 of file specialAna\&.hh\&.
 .PP
 Referenced by TriggerSelector()\&.
 .SS "vector< pxl::Particle* >* specialAna::METList"
 
 .PP
-Definition at line 153 of file specialAna\&.hh\&.
+Definition at line 154 of file specialAna\&.hh\&.
 .PP
 Referenced by analyseEvent(), endEvent(), FillSystematicsUpDown(), initEvent(), and KinematicsSelector()\&.
 .SS "vector< pxl::Particle* >* specialAna::METListGen"
 
 .PP
-Definition at line 164 of file specialAna\&.hh\&.
+Definition at line 165 of file specialAna\&.hh\&.
 .PP
 Referenced by endEvent(), and initEvent()\&.
 .SS "map< string,float > specialAna::mkeep_resonance_mass"
 
 .PP
-Definition at line 206 of file specialAna\&.hh\&.
+Definition at line 207 of file specialAna\&.hh\&.
 .PP
 Referenced by initEvent(), and KinematicsSelector()\&.
 .SS "map< string,float > specialAna::mLeptonTree"
 
 .PP
-Definition at line 203 of file specialAna\&.hh\&.
+Definition at line 204 of file specialAna\&.hh\&.
 .SS "vector< pxl::Particle* >* specialAna::MuonList"
 
 .PP
-Definition at line 150 of file specialAna\&.hh\&.
+Definition at line 151 of file specialAna\&.hh\&.
 .PP
 Referenced by analyseEvent(), endEvent(), FillSystematicsUpDown(), initEvent(), and KinematicsSelector()\&.
 .SS "vector< pxl::Particle* >* specialAna::MuonListGen"
 
 .PP
-Definition at line 161 of file specialAna\&.hh\&.
+Definition at line 162 of file specialAna\&.hh\&.
 .PP
 Referenced by endEvent(), and initEvent()\&.
 .SS "map< string, \fBCuts\fP > specialAna::mutau_cut_cfgs"
 
 .PP
-Definition at line 182 of file specialAna\&.hh\&.
+Definition at line 183 of file specialAna\&.hh\&.
 .PP
 Referenced by Init_mutau_cuts(), and KinematicsSelector()\&.
 .SS "map< string, \fBCuts\fP > specialAna::mutaue_cut_cfgs"
 
 .PP
-Definition at line 185 of file specialAna\&.hh\&.
+Definition at line 186 of file specialAna\&.hh\&.
 .PP
 Referenced by Init_mutaue_cuts(), and KinematicsSelector()\&.
 .SS "map< string, \fBCuts\fP > specialAna::mutaumu_cut_cfgs"
 
 .PP
-Definition at line 186 of file specialAna\&.hh\&.
+Definition at line 187 of file specialAna\&.hh\&.
 .PP
 Referenced by Init_mutaumu_cuts(), and KinematicsSelector()\&.
 .SS "unsigned int specialAna::n_lepton"
 
 .PP
-Definition at line 147 of file specialAna\&.hh\&.
+Definition at line 148 of file specialAna\&.hh\&.
 .SS "unsigned int specialAna::numBJet"
 
 .PP
-Definition at line 144 of file specialAna\&.hh\&.
+Definition at line 145 of file specialAna\&.hh\&.
 .PP
 Referenced by Bjet_veto(), and initEvent()\&.
 .SS "unsigned int specialAna::numEle"
 
 .PP
-Definition at line 139 of file specialAna\&.hh\&.
+Definition at line 140 of file specialAna\&.hh\&.
 .PP
 Referenced by initEvent()\&.
 .SS "unsigned int specialAna::numGamma"
 
 .PP
-Definition at line 141 of file specialAna\&.hh\&.
+Definition at line 142 of file specialAna\&.hh\&.
 .PP
 Referenced by initEvent()\&.
 .SS "unsigned int specialAna::numJet"
 
 .PP
-Definition at line 143 of file specialAna\&.hh\&.
+Definition at line 144 of file specialAna\&.hh\&.
 .PP
 Referenced by initEvent()\&.
 .SS "unsigned int specialAna::numMET"
 
 .PP
-Definition at line 142 of file specialAna\&.hh\&.
+Definition at line 143 of file specialAna\&.hh\&.
 .PP
 Referenced by initEvent()\&.
 .SS "unsigned int specialAna::numMuon"
 
 .PP
-Definition at line 138 of file specialAna\&.hh\&.
+Definition at line 139 of file specialAna\&.hh\&.
 .PP
 Referenced by initEvent()\&.
 .SS "unsigned int specialAna::numTau"
 
 .PP
-Definition at line 140 of file specialAna\&.hh\&.
+Definition at line 141 of file specialAna\&.hh\&.
 .PP
 Referenced by initEvent()\&.
 .SS "const std::string specialAna::particles[4] = {'Ele', 'Muon', 'Tau', 'MET'}"
 
 .PP
-Definition at line 117 of file specialAna\&.hh\&.
+Definition at line 118 of file specialAna\&.hh\&.
 .SS "const std::string specialAna::particleSymbols[4] = {'e', '#mu', '#tau', 'E_{T}^{miss}'}"
 
 .PP
-Definition at line 118 of file specialAna\&.hh\&.
+Definition at line 119 of file specialAna\&.hh\&.
 .SS "double specialAna::pileup_weight"
 
 .PP
-Definition at line 209 of file specialAna\&.hh\&.
+Definition at line 210 of file specialAna\&.hh\&.
 .PP
 Referenced by FillControllHistos(), initEvent(), and KinematicsSelector()\&.
 .SS "vector< pxl::Particle* >* specialAna::RememberMET"
 
 .PP
-Definition at line 158 of file specialAna\&.hh\&.
+Definition at line 159 of file specialAna\&.hh\&.
 .PP
 Referenced by FillSystematicsUpDown()\&.
 .SS "vector< pxl::Particle* >* specialAna::RememberPart"
 
 .PP
-Definition at line 157 of file specialAna\&.hh\&.
+Definition at line 158 of file specialAna\&.hh\&.
 .PP
 Referenced by FillSystematicsUpDown()\&.
 .SS "map< string, double > specialAna::resonance_mass"
 
 .PP
-Definition at line 198 of file specialAna\&.hh\&.
+Definition at line 199 of file specialAna\&.hh\&.
 .PP
 Referenced by Fill_Resonance_histograms(), FillSystematicsUpDown(), FindResonance(), initEvent(), and KinematicsSelector()\&.
 .SS "map< string, double > specialAna::resonance_mass_gen"
 
 .PP
-Definition at line 199 of file specialAna\&.hh\&.
+Definition at line 200 of file specialAna\&.hh\&.
 .PP
 Referenced by Fill_Gen_histograms(), Fill_Resonance_histograms(), FillSystematicsUpDown(), FindResonance(), and initEvent()\&.
 .SS "bool specialAna::runOnData"
@@ -1328,85 +1335,85 @@ Referenced by analyseEvent(), endEvent(), endJob(), FillControllHistos(), and in
 .SS "vector< pxl::Particle* >* specialAna::S3ListGen"
 
 .PP
-Definition at line 166 of file specialAna\&.hh\&.
+Definition at line 167 of file specialAna\&.hh\&.
 .PP
 Referenced by Fill_Gen_Controll_histo(), GenSelector(), Get_Truth_match(), getPtHat(), initEvent(), and tail_selector()\&.
 .SS "pxl::Particle* specialAna::sel_lepton_nprompt"
 
 .PP
-Definition at line 194 of file specialAna\&.hh\&.
+Definition at line 195 of file specialAna\&.hh\&.
 .PP
 Referenced by calc_lep_fraction(), Fill_Resonance_histograms(), FillSystematicsUpDown(), FindResonance(), initEvent(), Leptonic_fraction_cut(), Make_DeltaPhi_emu(), Make_DeltaPhi_mutau(), Make_DeltaPhi_tauemu(), Make_DeltaPhi_tauMET(), Make_zeta_cut(), OppSign_charge(), and pT_muele_ratio_cut()\&.
 .SS "pxl::Particle* specialAna::sel_lepton_nprompt_corr"
 
 .PP
-Definition at line 196 of file specialAna\&.hh\&.
+Definition at line 197 of file specialAna\&.hh\&.
 .PP
 Referenced by Fill_Resonance_histograms(), FillSystematicsUpDown(), FindResonance(), initEvent(), and pT_mutau_ratio_cut()\&.
 .SS "pxl::Particle* specialAna::sel_lepton_prompt"
 
 .PP
-Definition at line 193 of file specialAna\&.hh\&.
+Definition at line 194 of file specialAna\&.hh\&.
 .PP
 Referenced by calc_lep_fraction(), Fill_Resonance_histograms(), FillSystematicsUpDown(), FindResonance(), initEvent(), Leptonic_fraction_cut(), Make_DeltaPhi_emu(), Make_DeltaPhi_mutau(), Make_DeltaPhi_tauemu(), Make_zeta_cut(), MT_cut(), OppSign_charge(), pT_muele_ratio_cut(), and pT_mutau_ratio_cut()\&.
 .SS "pxl::Particle* specialAna::sel_met"
 
 .PP
-Definition at line 195 of file specialAna\&.hh\&.
+Definition at line 196 of file specialAna\&.hh\&.
 .PP
 Referenced by Fill_Resonance_histograms(), FillSystematicsUpDown(), FindResonance(), initEvent(), Make_DeltaPhi_tauMET(), Make_zeta_cut(), and MT_cut()\&.
 .SS "pxl::Particle* specialAna::sel_part1_gen"
 
 .PP
-Definition at line 190 of file specialAna\&.hh\&.
+Definition at line 191 of file specialAna\&.hh\&.
 .PP
 Referenced by Fill_Gen_histograms(), and FindResonance()\&.
 .SS "pxl::Particle* specialAna::sel_part2_gen"
 
 .PP
-Definition at line 191 of file specialAna\&.hh\&.
+Definition at line 192 of file specialAna\&.hh\&.
 .PP
 Referenced by Fill_Gen_histograms(), and FindResonance()\&.
 .SS "vector< pxl::Particle* >* specialAna::TauList"
 
 .PP
-Definition at line 151 of file specialAna\&.hh\&.
+Definition at line 152 of file specialAna\&.hh\&.
 .PP
 Referenced by analyseEvent(), endEvent(), FillSystematicsUpDown(), initEvent(), and KinematicsSelector()\&.
 .SS "vector< pxl::Particle* >* specialAna::TauListGen"
 
 .PP
-Definition at line 162 of file specialAna\&.hh\&.
+Definition at line 163 of file specialAna\&.hh\&.
 .PP
 Referenced by endEvent(), and initEvent()\&.
 .SS "double specialAna::temp_event"
 
 .PP
-Definition at line 134 of file specialAna\&.hh\&.
+Definition at line 135 of file specialAna\&.hh\&.
 .PP
 Referenced by initEvent()\&.
 .SS "double specialAna::temp_ls"
 
 .PP
-Definition at line 133 of file specialAna\&.hh\&.
+Definition at line 134 of file specialAna\&.hh\&.
 .PP
 Referenced by initEvent()\&.
 .SS "double specialAna::temp_run"
 
 .PP
-Definition at line 132 of file specialAna\&.hh\&.
+Definition at line 133 of file specialAna\&.hh\&.
 .PP
 Referenced by initEvent()\&.
 .SS "unordered_set< string > specialAna::triggers"
 
 .PP
-Definition at line 201 of file specialAna\&.hh\&.
+Definition at line 202 of file specialAna\&.hh\&.
 .PP
 Referenced by endJob(), and TriggerSelector()\&.
 .SS "double specialAna::weight"
 
 .PP
-Definition at line 136 of file specialAna\&.hh\&.
+Definition at line 137 of file specialAna\&.hh\&.
 .PP
 Referenced by analyseEvent(), Fill_Gen_histograms(), Fill_N1_histos(), Fill_Particle_histos(), Fill_Resonance_histograms(), FillControllHistos(), initEvent(), and tail_selector()\&.
 
