--- a/doc/doc_efficiencies/man/man3/specialAna.3
+++ b/doc/doc_efficiencies/man/man3/specialAna.3
@@ -104,6 +104,9 @@ Inherits AnalysisProcess\&.
 .RI "void \fBFill_Gen_histograms\fP (int n_histos, const char *channel, const char *part1, const char *part2)"
 .br
 .ti -1c
+.RI "pxl::Particle * \fBGet_Trigger_match\fP (string name, pxl::Particle *lepton)"
+.br
+.ti -1c
 .RI "pxl::Particle * \fBGet_Truth_match\fP (string name, pxl::Particle *lepton)"
 .br
 .ti -1c
@@ -459,7 +462,7 @@ References Check_Muo_ID(), Check_Tau_ID(), EleList, endEvent(), Fill_Gen_Control
 .SS "bool specialAna::Bjet_veto (\fBCuts\fP &cuts)"
 
 .PP
-Definition at line 1426 of file specialAna\&.cc\&.
+Definition at line 1459 of file specialAna\&.cc\&.
 .PP
 References numBJet, and Cuts::SetVars()\&.
 .PP
@@ -467,7 +470,7 @@ Referenced by KinematicsSelector()\&.
 .SS "double specialAna::calc_lep_fraction ()"
 
 .PP
-Definition at line 1462 of file specialAna\&.cc\&.
+Definition at line 1495 of file specialAna\&.cc\&.
 .PP
 References JetList, sel_lepton_nprompt, and sel_lepton_prompt\&.
 .PP
@@ -475,7 +478,7 @@ Referenced by Leptonic_fraction_cut()\&.
 .SS "void specialAna::channel_writer (TFile *file, const char *channel)"
 
 .PP
-Definition at line 1724 of file specialAna\&.cc\&.
+Definition at line 1757 of file specialAna\&.cc\&.
 .PP
 References channel_stages, and file1\&.
 .PP
@@ -483,13 +486,13 @@ Referenced by endJob()\&.
 .SS "bool specialAna::Check_Ele_ID (pxl::Particle *ele)"
 
 .PP
-Definition at line 1325 of file specialAna\&.cc\&.
+Definition at line 1358 of file specialAna\&.cc\&.
 .PP
 Referenced by Check_Par_ID()\&.
 .SS "bool specialAna::Check_Muo_ID (pxl::Particle *muon)"
 
 .PP
-Definition at line 1310 of file specialAna\&.cc\&.
+Definition at line 1343 of file specialAna\&.cc\&.
 .PP
 References b_13TeV, and b_8TeV\&.
 .PP
@@ -497,7 +500,7 @@ Referenced by analyseEvent(), and Check_Par_ID()\&.
 .SS "bool specialAna::Check_Par_ID (pxl::Particle *part)"
 
 .PP
-Definition at line 1276 of file specialAna\&.cc\&.
+Definition at line 1309 of file specialAna\&.cc\&.
 .PP
 References Check_Ele_ID(), Check_Muo_ID(), Check_Tau_ID(), and m_TauType\&.
 .PP
@@ -505,7 +508,7 @@ Referenced by FindResonance()\&.
 .SS "bool specialAna::Check_Tau_ID (pxl::Particle *tau)"
 
 .PP
-Definition at line 1292 of file specialAna\&.cc\&.
+Definition at line 1325 of file specialAna\&.cc\&.
 .PP
 References b_13TeV, and b_8TeV\&.
 .PP
@@ -521,11 +524,11 @@ Delta phi between the two particles
 .PP
 pT ratio of the two particles 
 .PP
-Definition at line 1012 of file specialAna\&.cc\&.
+Definition at line 1045 of file specialAna\&.cc\&.
 .SS "void specialAna::Create_N1_histos (const char *channel, std::map< std::string, \fBCuts\fP > &m_cfg, std::string constendung = \fC''\fP)"
 
 .PP
-Definition at line 932 of file specialAna\&.cc\&.
+Definition at line 965 of file specialAna\&.cc\&.
 .SS "void specialAna::Create_Resonance_histograms (intn_histos, const char *channel, const char *part1, const char *part2, std::string constendung = \fC''\fP)"
 Cutflow histogram
 .PP
@@ -551,7 +554,7 @@ Delta phi between the other particles
 .PP
 pT ratio of the other particles 
 .PP
-Definition at line 1046 of file specialAna\&.cc\&.
+Definition at line 1079 of file specialAna\&.cc\&.
 .SS "void specialAna::Create_trigger_effs ()"
 
 .PP
@@ -559,17 +562,17 @@ Definition at line 924 of file specialAna\&.cc\&.
 .SS "double specialAna::DeltaPhi (doublea, doubleb)"
 
 .PP
-Definition at line 1645 of file specialAna\&.cc\&.
+Definition at line 1678 of file specialAna\&.cc\&.
 .PP
 Referenced by Fill_Gen_histograms(), Fill_Resonance_histograms(), Make_DeltaPhi_emu(), Make_DeltaPhi_mutau(), Make_DeltaPhi_tauemu(), and Make_DeltaPhi_tauMET()\&.
 .SS "double specialAna::DeltaPhi (pxl::Particle *lepton, pxl::Particle *met)"
 
 .PP
-Definition at line 1654 of file specialAna\&.cc\&.
+Definition at line 1687 of file specialAna\&.cc\&.
 .SS "void specialAna::endEvent (const pxl::Event *event)"
 
 .PP
-Definition at line 1959 of file specialAna\&.cc\&.
+Definition at line 1992 of file specialAna\&.cc\&.
 .PP
 References EleList, EleListGen, GammaList, GammaListGen, JetList, JetListGen, keep_data_event, METList, METListGen, MuonList, MuonListGen, runOnData, TauList, and TauListGen\&.
 .PP
@@ -577,13 +580,13 @@ Referenced by analyseEvent()\&.
 .SS "void specialAna::endJob (const Serializable *)\fC [virtual]\fP"
 
 .PP
-Definition at line 1758 of file specialAna\&.cc\&.
+Definition at line 1791 of file specialAna\&.cc\&.
 .PP
 References channel_writer(), file1, runOnData, and triggers\&.
 .SS "void specialAna::Fill_Gen_Controll_histo ()"
 
 .PP
-Definition at line 1547 of file specialAna\&.cc\&.
+Definition at line 1580 of file specialAna\&.cc\&.
 .PP
 References m_GenEvtView, and S3ListGen\&.
 .PP
@@ -599,7 +602,7 @@ Delta phi between the two particles
 .PP
 pT ratio of the two particles 
 .PP
-Definition at line 1029 of file specialAna\&.cc\&.
+Definition at line 1062 of file specialAna\&.cc\&.
 .PP
 References DeltaPhi(), resonance_mass_gen, sel_part1_gen, sel_part2_gen, and weight\&.
 .PP
@@ -609,7 +612,7 @@ Referenced by GenSelector()\&.
 .SS "void specialAna::Fill_N1_histos (const char *channel, std::map< std::string, \fBCuts\fP > &m_cfg, std::string constendung = \fC''\fP)"
 
 .PP
-Definition at line 946 of file specialAna\&.cc\&.
+Definition at line 979 of file specialAna\&.cc\&.
 .PP
 References weight\&.
 .PP
@@ -617,7 +620,7 @@ Referenced by KinematicsSelector()\&.
 .SS "void specialAna::Fill_Particle_histos (inthist_number, pxl::Particle *lepton)"
 
 .PP
-Definition at line 1583 of file specialAna\&.cc\&.
+Definition at line 1616 of file specialAna\&.cc\&.
 .PP
 References Get_Truth_match(), m_METType, m_TauType, and weight\&.
 .PP
@@ -647,7 +650,7 @@ Delta phi between the other particles
 .PP
 pT ratio of the other particles 
 .PP
-Definition at line 1088 of file specialAna\&.cc\&.
+Definition at line 1121 of file specialAna\&.cc\&.
 .PP
 References DeltaPhi(), resonance_mass, resonance_mass_gen, sel_lepton_nprompt, sel_lepton_nprompt_corr, sel_lepton_prompt, sel_met, and weight\&.
 .PP
@@ -691,7 +694,7 @@ Referenced by analyseEvent(), and FillSystematics()\&.
 .SS "bool specialAna::FindResonance (const char *channel, vector< pxl::Particle * >gen_list)"
 
 .PP
-Definition at line 1131 of file specialAna\&.cc\&.
+Definition at line 1164 of file specialAna\&.cc\&.
 .PP
 References b_13TeV, b_8TeV, resonance_mass_gen, sel_part1_gen, and sel_part2_gen\&.
 .PP
@@ -699,7 +702,7 @@ Referenced by GenSelector(), and KinematicsSelector()\&.
 .SS "bool specialAna::FindResonance (const char *channel, vector< pxl::Particle * >part1_list, vector< pxl::Particle * >part2_list)"
 
 .PP
-Definition at line 1189 of file specialAna\&.cc\&.
+Definition at line 1222 of file specialAna\&.cc\&.
 .PP
 References Check_Par_ID(), resonance_mass, sel_lepton_nprompt, and sel_lepton_prompt\&.
 .SS "bool specialAna::FindResonance (const char *channel, vector< pxl::Particle * >part1_list, vector< pxl::Particle * >part2_list, vector< pxl::Particle * >met_list)"
@@ -711,21 +714,25 @@ project MET to tau direction
 .PP
 project MET parallel to tau direction 
 .PP
-Definition at line 1214 of file specialAna\&.cc\&.
+Definition at line 1247 of file specialAna\&.cc\&.
 .PP
 References Check_Par_ID(), resonance_mass, sel_lepton_nprompt, sel_lepton_nprompt_corr, sel_lepton_prompt, and sel_met\&.
 .SS "void specialAna::GenSelector ()"
 
 .PP
-Definition at line 974 of file specialAna\&.cc\&.
+Definition at line 1007 of file specialAna\&.cc\&.
 .PP
 References b_emu, b_etau, b_etaue, b_etaumu, b_mutau, b_mutaue, b_mutaumu, Fill_Gen_histograms(), FindResonance(), and S3ListGen\&.
 .PP
 Referenced by analyseEvent()\&.
+.SS "pxl::Particle * specialAna::Get_Trigger_match (stringname, pxl::Particle *lepton)"
+
+.PP
+Definition at line 932 of file specialAna\&.cc\&.
 .SS "pxl::Particle * specialAna::Get_Truth_match (stringname, pxl::Particle *lepton)"
 
 .PP
-Definition at line 1612 of file specialAna\&.cc\&.
+Definition at line 1645 of file specialAna\&.cc\&.
 .PP
 References b_13TeV, b_8TeV, and S3ListGen\&.
 .PP
@@ -733,7 +740,7 @@ Referenced by Fill_Particle_histos()\&.
 .SS "double specialAna::getHT ()"
 
 .PP
-Definition at line 1713 of file specialAna\&.cc\&.
+Definition at line 1746 of file specialAna\&.cc\&.
 .PP
 References BJetList, and JetList\&.
 .PP
@@ -741,7 +748,7 @@ Referenced by FillControllHistos()\&.
 .SS "double specialAna::getPtHat ()"
 
 .PP
-Definition at line 1670 of file specialAna\&.cc\&.
+Definition at line 1703 of file specialAna\&.cc\&.
 .PP
 References b_13TeV, b_8TeV, and S3ListGen\&.
 .PP
@@ -791,7 +798,7 @@ References mutaumu_cut_cfgs\&.
 .SS "void specialAna::initEvent (const pxl::Event *event)"
 
 .PP
-Definition at line 1811 of file specialAna\&.cc\&.
+Definition at line 1844 of file specialAna\&.cc\&.
 .PP
 References b_13TeV, b_8TeV, BJetList, EleList, EleListGen, event_weight, events_, GammaList, GammaListGen, JetList, JetListGen, keep_data_event, m_BJets_algo, m_dataPeriod, m_GenEvtView, m_JetAlgo, m_METType, m_RecEvtView, m_TauType, m_TrigEvtView, METList, METListGen, mkeep_resonance_mass, MuonList, MuonListGen, numBJet, numEle, numGamma, numJet, numMET, numMuon, numTau, pileup_weight, resonance_mass, resonance_mass_gen, runOnData, S3ListGen, sel_lepton_nprompt, sel_lepton_nprompt_corr, sel_lepton_prompt, sel_met, TauList, TauListGen, temp_event, temp_ls, temp_run, and weight\&.
 .PP
@@ -853,7 +860,7 @@ Referenced by analyseEvent(), and FillSystematicsUpDown()\&.
 .SS "bool specialAna::Leptonic_fraction_cut (\fBCuts\fP &cuts)"
 
 .PP
-Definition at line 1473 of file specialAna\&.cc\&.
+Definition at line 1506 of file specialAna\&.cc\&.
 .PP
 References calc_lep_fraction(), sel_lepton_nprompt, sel_lepton_prompt, and Cuts::SetVars()\&.
 .PP
@@ -861,7 +868,7 @@ Referenced by KinematicsSelector()\&.
 .SS "bool specialAna::Make_DeltaPhi_emu (\fBCuts\fP &cuts)"
 
 .PP
-Definition at line 1412 of file specialAna\&.cc\&.
+Definition at line 1445 of file specialAna\&.cc\&.
 .PP
 References DeltaPhi(), sel_lepton_nprompt, sel_lepton_prompt, and Cuts::SetVars()\&.
 .PP
@@ -869,7 +876,7 @@ Referenced by KinematicsSelector()\&.
 .SS "bool specialAna::Make_DeltaPhi_mutau (\fBCuts\fP &cuts)"
 
 .PP
-Definition at line 1384 of file specialAna\&.cc\&.
+Definition at line 1417 of file specialAna\&.cc\&.
 .PP
 References DeltaPhi(), sel_lepton_nprompt, sel_lepton_prompt, and Cuts::SetVars()\&.
 .PP
@@ -877,7 +884,7 @@ Referenced by KinematicsSelector()\&.
 .SS "bool specialAna::Make_DeltaPhi_tauemu (\fBCuts\fP &cuts)"
 
 .PP
-Definition at line 1398 of file specialAna\&.cc\&.
+Definition at line 1431 of file specialAna\&.cc\&.
 .PP
 References DeltaPhi(), sel_lepton_nprompt, sel_lepton_prompt, and Cuts::SetVars()\&.
 .PP
@@ -885,7 +892,7 @@ Referenced by KinematicsSelector()\&.
 .SS "bool specialAna::Make_DeltaPhi_tauMET (\fBCuts\fP &cuts)"
 
 .PP
-Definition at line 1370 of file specialAna\&.cc\&.
+Definition at line 1403 of file specialAna\&.cc\&.
 .PP
 References DeltaPhi(), sel_lepton_nprompt, sel_met, and Cuts::SetVars()\&.
 .PP
@@ -893,7 +900,7 @@ Referenced by KinematicsSelector()\&.
 .SS "bool specialAna::Make_zeta_cut (\fBCuts\fP &cuts)"
 
 .PP
-Definition at line 1358 of file specialAna\&.cc\&.
+Definition at line 1391 of file specialAna\&.cc\&.
 .PP
 References Make_zeta_stuff(), sel_lepton_nprompt, sel_lepton_prompt, sel_met, and Cuts::SetVars()\&.
 .PP
@@ -901,19 +908,19 @@ Referenced by KinematicsSelector()\&.
 .SS "vector< double > specialAna::Make_zeta_stuff (pxl::Particle *muon, pxl::Particle *tau, pxl::Particle *met)"
 
 .PP
-Definition at line 1331 of file specialAna\&.cc\&.
+Definition at line 1364 of file specialAna\&.cc\&.
 .PP
 Referenced by Make_zeta_cut()\&.
 .SS "double specialAna::MT (pxl::Particle *lepton, pxl::Particle *met)"
 
 .PP
-Definition at line 1665 of file specialAna\&.cc\&.
+Definition at line 1698 of file specialAna\&.cc\&.
 .PP
 Referenced by MT_cut()\&.
 .SS "bool specialAna::MT_cut (\fBCuts\fP &cuts)"
 
 .PP
-Definition at line 1448 of file specialAna\&.cc\&.
+Definition at line 1481 of file specialAna\&.cc\&.
 .PP
 References MT(), sel_lepton_prompt, sel_met, and Cuts::SetVars()\&.
 .PP
@@ -921,7 +928,7 @@ Referenced by KinematicsSelector()\&.
 .SS "bool specialAna::OppSign_charge (\fBCuts\fP &cuts)"
 
 .PP
-Definition at line 1435 of file specialAna\&.cc\&.
+Definition at line 1468 of file specialAna\&.cc\&.
 .PP
 References sel_lepton_nprompt, sel_lepton_prompt, and Cuts::SetVars()\&.
 .PP
@@ -929,7 +936,7 @@ Referenced by KinematicsSelector()\&.
 .SS "bool specialAna::pT_muele_ratio_cut (\fBCuts\fP &cuts)"
 
 .PP
-Definition at line 1502 of file specialAna\&.cc\&.
+Definition at line 1535 of file specialAna\&.cc\&.
 .PP
 References sel_lepton_nprompt, sel_lepton_prompt, and Cuts::SetVars()\&.
 .PP
@@ -937,7 +944,7 @@ Referenced by KinematicsSelector()\&.
 .SS "bool specialAna::pT_mutau_ratio_cut (\fBCuts\fP &cuts)"
 
 .PP
-Definition at line 1487 of file specialAna\&.cc\&.
+Definition at line 1520 of file specialAna\&.cc\&.
 .PP
 References sel_lepton_nprompt_corr, sel_lepton_prompt, and Cuts::SetVars()\&.
 .PP
@@ -959,7 +966,7 @@ Referenced by analyseEvent()\&.
 .SS "bool specialAna::TriggerSelector (const pxl::Event *event)"
 
 .PP
-Definition at line 1516 of file specialAna\&.cc\&.
+Definition at line 1549 of file specialAna\&.cc\&.
 .PP
 References b_13TeV, b_8TeV, m_TrigEvtView, m_trigger_string, and triggers\&.
 .PP
@@ -969,137 +976,137 @@ Referenced by analyseEvent()\&.
 .SS "bool specialAna::b_13TeV"
 
 .PP
-Definition at line 173 of file specialAna\&.hh\&.
+Definition at line 174 of file specialAna\&.hh\&.
 .PP
 Referenced by Check_Muo_ID(), Check_Tau_ID(), FindResonance(), Get_Truth_match(), getPtHat(), initEvent(), tail_selector(), and TriggerSelector()\&.
 .SS "bool specialAna::b_14TeV"
 
 .PP
-Definition at line 172 of file specialAna\&.hh\&.
+Definition at line 173 of file specialAna\&.hh\&.
 .SS "bool specialAna::b_8TeV"
 
 .PP
-Definition at line 174 of file specialAna\&.hh\&.
+Definition at line 175 of file specialAna\&.hh\&.
 .PP
 Referenced by Check_Muo_ID(), Check_Tau_ID(), FindResonance(), Get_Truth_match(), getPtHat(), initEvent(), tail_selector(), and TriggerSelector()\&.
 .SS "bool specialAna::b_emu"
 
 .PP
-Definition at line 176 of file specialAna\&.hh\&.
+Definition at line 177 of file specialAna\&.hh\&.
 .PP
 Referenced by GenSelector(), and KinematicsSelector()\&.
 .SS "bool specialAna::b_etau"
 
 .PP
-Definition at line 177 of file specialAna\&.hh\&.
+Definition at line 178 of file specialAna\&.hh\&.
 .PP
 Referenced by GenSelector(), and KinematicsSelector()\&.
 .SS "bool specialAna::b_etaue"
 
 .PP
-Definition at line 179 of file specialAna\&.hh\&.
+Definition at line 180 of file specialAna\&.hh\&.
 .PP
 Referenced by GenSelector(), and KinematicsSelector()\&.
 .SS "bool specialAna::b_etaumu"
 
 .PP
-Definition at line 180 of file specialAna\&.hh\&.
+Definition at line 181 of file specialAna\&.hh\&.
 .PP
 Referenced by GenSelector(), and KinematicsSelector()\&.
 .SS "bool specialAna::b_mutau"
 
 .PP
-Definition at line 178 of file specialAna\&.hh\&.
+Definition at line 179 of file specialAna\&.hh\&.
 .PP
 Referenced by GenSelector(), and KinematicsSelector()\&.
 .SS "bool specialAna::b_mutaue"
 
 .PP
-Definition at line 181 of file specialAna\&.hh\&.
+Definition at line 182 of file specialAna\&.hh\&.
 .PP
 Referenced by GenSelector(), and KinematicsSelector()\&.
 .SS "bool specialAna::b_mutaumu"
 
 .PP
-Definition at line 182 of file specialAna\&.hh\&.
+Definition at line 183 of file specialAna\&.hh\&.
 .PP
 Referenced by GenSelector(), and KinematicsSelector()\&.
 .SS "vector< pxl::Particle* >* specialAna::BJetList"
 
 .PP
-Definition at line 159 of file specialAna\&.hh\&.
+Definition at line 160 of file specialAna\&.hh\&.
 .PP
 Referenced by getHT(), and initEvent()\&.
 .SS "map< string, int > specialAna::channel_stages"
 
 .PP
-Definition at line 192 of file specialAna\&.hh\&.
+Definition at line 193 of file specialAna\&.hh\&.
 .PP
 Referenced by channel_writer()\&.
 .SS "const Tools::MConfig specialAna::config_"
 
 .PP
-Definition at line 134 of file specialAna\&.hh\&.
+Definition at line 135 of file specialAna\&.hh\&.
 .PP
 Referenced by tail_selector()\&.
 .SS "TString specialAna::d_mydisc[66]"
 
 .PP
-Definition at line 125 of file specialAna\&.hh\&.
+Definition at line 126 of file specialAna\&.hh\&.
 .SS "TString specialAna::d_mydiscmu[6]"
 
 .PP
-Definition at line 131 of file specialAna\&.hh\&.
+Definition at line 132 of file specialAna\&.hh\&.
 .SS "bool specialAna::doTriggerStudies"
 
 .PP
-Definition at line 118 of file specialAna\&.hh\&.
+Definition at line 119 of file specialAna\&.hh\&.
 .SS "vector< pxl::Particle* >* specialAna::EleList"
 
 .PP
-Definition at line 153 of file specialAna\&.hh\&.
+Definition at line 154 of file specialAna\&.hh\&.
 .PP
 Referenced by analyseEvent(), endEvent(), FillSystematicsUpDown(), initEvent(), and KinematicsSelector()\&.
 .SS "vector< pxl::Particle* >* specialAna::EleListGen"
 
 .PP
-Definition at line 164 of file specialAna\&.hh\&.
+Definition at line 165 of file specialAna\&.hh\&.
 .PP
 Referenced by endEvent(), and initEvent()\&.
 .SS "map< string, \fBCuts\fP > specialAna::emu_cut_cfgs"
 
 .PP
-Definition at line 184 of file specialAna\&.hh\&.
+Definition at line 185 of file specialAna\&.hh\&.
 .PP
 Referenced by Init_emu_cuts(), and KinematicsSelector()\&.
 .SS "map< string, \fBCuts\fP > specialAna::etau_cut_cfgs"
 
 .PP
-Definition at line 185 of file specialAna\&.hh\&.
+Definition at line 186 of file specialAna\&.hh\&.
 .PP
 Referenced by Init_etau_cuts(), and KinematicsSelector()\&.
 .SS "map< string, \fBCuts\fP > specialAna::etaue_cut_cfgs"
 
 .PP
-Definition at line 187 of file specialAna\&.hh\&.
+Definition at line 188 of file specialAna\&.hh\&.
 .PP
 Referenced by Init_etaue_cuts(), and KinematicsSelector()\&.
 .SS "map< string, \fBCuts\fP > specialAna::etaumu_cut_cfgs"
 
 .PP
-Definition at line 188 of file specialAna\&.hh\&.
+Definition at line 189 of file specialAna\&.hh\&.
 .PP
 Referenced by Init_etaumu_cuts(), and KinematicsSelector()\&.
 .SS "double specialAna::event_weight"
 
 .PP
-Definition at line 212 of file specialAna\&.hh\&.
+Definition at line 213 of file specialAna\&.hh\&.
 .PP
 Referenced by FillControllHistos(), initEvent(), and KinematicsSelector()\&.
 .SS "int specialAna::events_"
 
 .PP
-Definition at line 150 of file specialAna\&.hh\&.
+Definition at line 151 of file specialAna\&.hh\&.
 .PP
 Referenced by initEvent()\&.
 .SS "TFile* specialAna::file1"
@@ -1111,323 +1118,323 @@ Referenced by channel_writer(), and endJob()\&.
 .SS "vector< pxl::Particle* >* specialAna::GammaList"
 
 .PP
-Definition at line 156 of file specialAna\&.hh\&.
+Definition at line 157 of file specialAna\&.hh\&.
 .PP
 Referenced by endEvent(), and initEvent()\&.
 .SS "vector< pxl::Particle* >* specialAna::GammaListGen"
 
 .PP
-Definition at line 167 of file specialAna\&.hh\&.
+Definition at line 168 of file specialAna\&.hh\&.
 .PP
 Referenced by endEvent(), and initEvent()\&.
 .SS "bool specialAna::isOldPXLFile"
 
 .PP
-Definition at line 127 of file specialAna\&.hh\&.
+Definition at line 128 of file specialAna\&.hh\&.
 .SS "vector< pxl::Particle* >* specialAna::JetList"
 
 .PP
-Definition at line 158 of file specialAna\&.hh\&.
+Definition at line 159 of file specialAna\&.hh\&.
 .PP
 Referenced by calc_lep_fraction(), endEvent(), getHT(), and initEvent()\&.
 .SS "vector< pxl::Particle* >* specialAna::JetListGen"
 
 .PP
-Definition at line 169 of file specialAna\&.hh\&.
+Definition at line 170 of file specialAna\&.hh\&.
 .PP
 Referenced by endEvent(), and initEvent()\&.
 .SS "bool specialAna::keep_data_event"
 
 .PP
-Definition at line 209 of file specialAna\&.hh\&.
+Definition at line 210 of file specialAna\&.hh\&.
 .PP
 Referenced by endEvent(), initEvent(), and KinematicsSelector()\&.
 .SS "string const specialAna::m_BJets_algo"
 
 .PP
-Definition at line 119 of file specialAna\&.hh\&.
+Definition at line 120 of file specialAna\&.hh\&.
 .PP
 Referenced by initEvent()\&.
 .SS "const std::string specialAna::m_channel"
 
 .PP
-Definition at line 133 of file specialAna\&.hh\&.
+Definition at line 134 of file specialAna\&.hh\&.
 .SS "const std::string specialAna::m_cutdatafile"
 
 .PP
-Definition at line 129 of file specialAna\&.hh\&.
+Definition at line 130 of file specialAna\&.hh\&.
 .SS "const std::string specialAna::m_dataPeriod"
 
 .PP
-Definition at line 132 of file specialAna\&.hh\&.
+Definition at line 133 of file specialAna\&.hh\&.
 .PP
 Referenced by initEvent()\&.
 .SS "pxl::EventView* specialAna::m_GenEvtView"
 
 .PP
-Definition at line 114 of file specialAna\&.hh\&.
+Definition at line 115 of file specialAna\&.hh\&.
 .PP
 Referenced by Fill_Gen_Controll_histo(), initEvent(), and tail_selector()\&.
 .SS "string const specialAna::m_JetAlgo"
 
 .PP
-Definition at line 119 of file specialAna\&.hh\&.
+Definition at line 120 of file specialAna\&.hh\&.
 .PP
 Referenced by initEvent()\&.
 .SS "string const specialAna::m_METType"
 
 .PP
-Definition at line 119 of file specialAna\&.hh\&.
+Definition at line 120 of file specialAna\&.hh\&.
 .PP
 Referenced by Fill_Particle_histos(), FillSystematicsUpDown(), and initEvent()\&.
 .SS "pxl::EventView* specialAna::m_RecEvtView"
 
 .PP
-Definition at line 113 of file specialAna\&.hh\&.
+Definition at line 114 of file specialAna\&.hh\&.
 .PP
 Referenced by FillControllHistos(), initEvent(), and KinematicsSelector()\&.
 .SS "string const specialAna::m_TauType"
 
 .PP
-Definition at line 119 of file specialAna\&.hh\&.
+Definition at line 120 of file specialAna\&.hh\&.
 .PP
 Referenced by Check_Par_ID(), Fill_Particle_histos(), FillSystematicsUpDown(), and initEvent()\&.
 .SS "pxl::EventView* specialAna::m_TrigEvtView"
 
 .PP
-Definition at line 115 of file specialAna\&.hh\&.
+Definition at line 116 of file specialAna\&.hh\&.
 .PP
 Referenced by initEvent(), and TriggerSelector()\&.
 .SS "const vector< string > specialAna::m_trigger_string"
 
 .PP
-Definition at line 130 of file specialAna\&.hh\&.
+Definition at line 131 of file specialAna\&.hh\&.
 .PP
 Referenced by TriggerSelector()\&.
 .SS "vector< pxl::Particle* >* specialAna::METList"
 
 .PP
-Definition at line 157 of file specialAna\&.hh\&.
+Definition at line 158 of file specialAna\&.hh\&.
 .PP
 Referenced by analyseEvent(), endEvent(), FillSystematicsUpDown(), initEvent(), and KinematicsSelector()\&.
 .SS "vector< pxl::Particle* >* specialAna::METListGen"
 
 .PP
-Definition at line 168 of file specialAna\&.hh\&.
+Definition at line 169 of file specialAna\&.hh\&.
 .PP
 Referenced by endEvent(), and initEvent()\&.
 .SS "map< string,float > specialAna::mkeep_resonance_mass"
 
 .PP
-Definition at line 210 of file specialAna\&.hh\&.
+Definition at line 211 of file specialAna\&.hh\&.
 .PP
 Referenced by initEvent(), and KinematicsSelector()\&.
 .SS "map< string,float > specialAna::mLeptonTree"
 
 .PP
-Definition at line 207 of file specialAna\&.hh\&.
+Definition at line 208 of file specialAna\&.hh\&.
 .SS "vector< pxl::Particle* >* specialAna::MuonList"
-
-.PP
-Definition at line 154 of file specialAna\&.hh\&.
-.PP
-Referenced by analyseEvent(), endEvent(), FillSystematicsUpDown(), initEvent(), and KinematicsSelector()\&.
-.SS "vector< pxl::Particle* >* specialAna::MuonListGen"
-
-.PP
-Definition at line 165 of file specialAna\&.hh\&.
-.PP
-Referenced by endEvent(), and initEvent()\&.
-.SS "map< string, \fBCuts\fP > specialAna::mutau_cut_cfgs"
-
-.PP
-Definition at line 186 of file specialAna\&.hh\&.
-.PP
-Referenced by Init_mutau_cuts(), and KinematicsSelector()\&.
-.SS "map< string, \fBCuts\fP > specialAna::mutaue_cut_cfgs"
-
-.PP
-Definition at line 189 of file specialAna\&.hh\&.
-.PP
-Referenced by Init_mutaue_cuts(), and KinematicsSelector()\&.
-.SS "map< string, \fBCuts\fP > specialAna::mutaumu_cut_cfgs"
-
-.PP
-Definition at line 190 of file specialAna\&.hh\&.
-.PP
-Referenced by Init_mutaumu_cuts(), and KinematicsSelector()\&.
-.SS "unsigned int specialAna::n_lepton"
-
-.PP
-Definition at line 151 of file specialAna\&.hh\&.
-.SS "unsigned int specialAna::numBJet"
-
-.PP
-Definition at line 148 of file specialAna\&.hh\&.
-.PP
-Referenced by Bjet_veto(), and initEvent()\&.
-.SS "unsigned int specialAna::numEle"
-
-.PP
-Definition at line 143 of file specialAna\&.hh\&.
-.PP
-Referenced by initEvent()\&.
-.SS "unsigned int specialAna::numGamma"
-
-.PP
-Definition at line 145 of file specialAna\&.hh\&.
-.PP
-Referenced by initEvent()\&.
-.SS "unsigned int specialAna::numJet"
-
-.PP
-Definition at line 147 of file specialAna\&.hh\&.
-.PP
-Referenced by initEvent()\&.
-.SS "unsigned int specialAna::numMET"
-
-.PP
-Definition at line 146 of file specialAna\&.hh\&.
-.PP
-Referenced by initEvent()\&.
-.SS "unsigned int specialAna::numMuon"
-
-.PP
-Definition at line 142 of file specialAna\&.hh\&.
-.PP
-Referenced by initEvent()\&.
-.SS "unsigned int specialAna::numTau"
-
-.PP
-Definition at line 144 of file specialAna\&.hh\&.
-.PP
-Referenced by initEvent()\&.
-.SS "const std::string specialAna::particles[4] = {'Ele', 'Muon', 'Tau', 'MET'}"
-
-.PP
-Definition at line 121 of file specialAna\&.hh\&.
-.SS "const std::string specialAna::particleSymbols[4] = {'e', '#mu', '#tau', 'E_{T}^{miss}'}"
-
-.PP
-Definition at line 122 of file specialAna\&.hh\&.
-.SS "double specialAna::pileup_weight"
-
-.PP
-Definition at line 213 of file specialAna\&.hh\&.
-.PP
-Referenced by FillControllHistos(), initEvent(), and KinematicsSelector()\&.
-.SS "vector< pxl::Particle* >* specialAna::RememberMET"
-
-.PP
-Definition at line 162 of file specialAna\&.hh\&.
-.PP
-Referenced by FillSystematicsUpDown()\&.
-.SS "vector< pxl::Particle* >* specialAna::RememberPart"
-
-.PP
-Definition at line 161 of file specialAna\&.hh\&.
-.PP
-Referenced by FillSystematicsUpDown()\&.
-.SS "map< string, double > specialAna::resonance_mass"
-
-.PP
-Definition at line 202 of file specialAna\&.hh\&.
-.PP
-Referenced by Fill_Resonance_histograms(), FillSystematicsUpDown(), FindResonance(), initEvent(), and KinematicsSelector()\&.
-.SS "map< string, double > specialAna::resonance_mass_gen"
-
-.PP
-Definition at line 203 of file specialAna\&.hh\&.
-.PP
-Referenced by Fill_Gen_histograms(), Fill_Resonance_histograms(), FillSystematicsUpDown(), FindResonance(), and initEvent()\&.
-.SS "bool specialAna::runOnData"
-
-.PP
-Definition at line 117 of file specialAna\&.hh\&.
-.PP
-Referenced by analyseEvent(), endEvent(), endJob(), FillControllHistos(), and initEvent()\&.
-.SS "vector< pxl::Particle* >* specialAna::S3ListGen"
-
-.PP
-Definition at line 170 of file specialAna\&.hh\&.
-.PP
-Referenced by Fill_Gen_Controll_histo(), GenSelector(), Get_Truth_match(), getPtHat(), initEvent(), and tail_selector()\&.
-.SS "pxl::Particle* specialAna::sel_lepton_nprompt"
-
-.PP
-Definition at line 198 of file specialAna\&.hh\&.
-.PP
-Referenced by calc_lep_fraction(), Fill_Resonance_histograms(), FillSystematicsUpDown(), FindResonance(), initEvent(), Leptonic_fraction_cut(), Make_DeltaPhi_emu(), Make_DeltaPhi_mutau(), Make_DeltaPhi_tauemu(), Make_DeltaPhi_tauMET(), Make_zeta_cut(), OppSign_charge(), and pT_muele_ratio_cut()\&.
-.SS "pxl::Particle* specialAna::sel_lepton_nprompt_corr"
-
-.PP
-Definition at line 200 of file specialAna\&.hh\&.
-.PP
-Referenced by Fill_Resonance_histograms(), FillSystematicsUpDown(), FindResonance(), initEvent(), and pT_mutau_ratio_cut()\&.
-.SS "pxl::Particle* specialAna::sel_lepton_prompt"
-
-.PP
-Definition at line 197 of file specialAna\&.hh\&.
-.PP
-Referenced by calc_lep_fraction(), Fill_Resonance_histograms(), FillSystematicsUpDown(), FindResonance(), initEvent(), Leptonic_fraction_cut(), Make_DeltaPhi_emu(), Make_DeltaPhi_mutau(), Make_DeltaPhi_tauemu(), Make_zeta_cut(), MT_cut(), OppSign_charge(), pT_muele_ratio_cut(), and pT_mutau_ratio_cut()\&.
-.SS "pxl::Particle* specialAna::sel_met"
-
-.PP
-Definition at line 199 of file specialAna\&.hh\&.
-.PP
-Referenced by Fill_Resonance_histograms(), FillSystematicsUpDown(), FindResonance(), initEvent(), Make_DeltaPhi_tauMET(), Make_zeta_cut(), and MT_cut()\&.
-.SS "pxl::Particle* specialAna::sel_part1_gen"
-
-.PP
-Definition at line 194 of file specialAna\&.hh\&.
-.PP
-Referenced by Fill_Gen_histograms(), and FindResonance()\&.
-.SS "pxl::Particle* specialAna::sel_part2_gen"
-
-.PP
-Definition at line 195 of file specialAna\&.hh\&.
-.PP
-Referenced by Fill_Gen_histograms(), and FindResonance()\&.
-.SS "vector< pxl::Particle* >* specialAna::TauList"
 
 .PP
 Definition at line 155 of file specialAna\&.hh\&.
 .PP
 Referenced by analyseEvent(), endEvent(), FillSystematicsUpDown(), initEvent(), and KinematicsSelector()\&.
-.SS "vector< pxl::Particle* >* specialAna::TauListGen"
+.SS "vector< pxl::Particle* >* specialAna::MuonListGen"
 
 .PP
 Definition at line 166 of file specialAna\&.hh\&.
 .PP
 Referenced by endEvent(), and initEvent()\&.
+.SS "map< string, \fBCuts\fP > specialAna::mutau_cut_cfgs"
+
+.PP
+Definition at line 187 of file specialAna\&.hh\&.
+.PP
+Referenced by Init_mutau_cuts(), and KinematicsSelector()\&.
+.SS "map< string, \fBCuts\fP > specialAna::mutaue_cut_cfgs"
+
+.PP
+Definition at line 190 of file specialAna\&.hh\&.
+.PP
+Referenced by Init_mutaue_cuts(), and KinematicsSelector()\&.
+.SS "map< string, \fBCuts\fP > specialAna::mutaumu_cut_cfgs"
+
+.PP
+Definition at line 191 of file specialAna\&.hh\&.
+.PP
+Referenced by Init_mutaumu_cuts(), and KinematicsSelector()\&.
+.SS "unsigned int specialAna::n_lepton"
+
+.PP
+Definition at line 152 of file specialAna\&.hh\&.
+.SS "unsigned int specialAna::numBJet"
+
+.PP
+Definition at line 149 of file specialAna\&.hh\&.
+.PP
+Referenced by Bjet_veto(), and initEvent()\&.
+.SS "unsigned int specialAna::numEle"
+
+.PP
+Definition at line 144 of file specialAna\&.hh\&.
+.PP
+Referenced by initEvent()\&.
+.SS "unsigned int specialAna::numGamma"
+
+.PP
+Definition at line 146 of file specialAna\&.hh\&.
+.PP
+Referenced by initEvent()\&.
+.SS "unsigned int specialAna::numJet"
+
+.PP
+Definition at line 148 of file specialAna\&.hh\&.
+.PP
+Referenced by initEvent()\&.
+.SS "unsigned int specialAna::numMET"
+
+.PP
+Definition at line 147 of file specialAna\&.hh\&.
+.PP
+Referenced by initEvent()\&.
+.SS "unsigned int specialAna::numMuon"
+
+.PP
+Definition at line 143 of file specialAna\&.hh\&.
+.PP
+Referenced by initEvent()\&.
+.SS "unsigned int specialAna::numTau"
+
+.PP
+Definition at line 145 of file specialAna\&.hh\&.
+.PP
+Referenced by initEvent()\&.
+.SS "const std::string specialAna::particles[4] = {'Ele', 'Muon', 'Tau', 'MET'}"
+
+.PP
+Definition at line 122 of file specialAna\&.hh\&.
+.SS "const std::string specialAna::particleSymbols[4] = {'e', '#mu', '#tau', 'E_{T}^{miss}'}"
+
+.PP
+Definition at line 123 of file specialAna\&.hh\&.
+.SS "double specialAna::pileup_weight"
+
+.PP
+Definition at line 214 of file specialAna\&.hh\&.
+.PP
+Referenced by FillControllHistos(), initEvent(), and KinematicsSelector()\&.
+.SS "vector< pxl::Particle* >* specialAna::RememberMET"
+
+.PP
+Definition at line 163 of file specialAna\&.hh\&.
+.PP
+Referenced by FillSystematicsUpDown()\&.
+.SS "vector< pxl::Particle* >* specialAna::RememberPart"
+
+.PP
+Definition at line 162 of file specialAna\&.hh\&.
+.PP
+Referenced by FillSystematicsUpDown()\&.
+.SS "map< string, double > specialAna::resonance_mass"
+
+.PP
+Definition at line 203 of file specialAna\&.hh\&.
+.PP
+Referenced by Fill_Resonance_histograms(), FillSystematicsUpDown(), FindResonance(), initEvent(), and KinematicsSelector()\&.
+.SS "map< string, double > specialAna::resonance_mass_gen"
+
+.PP
+Definition at line 204 of file specialAna\&.hh\&.
+.PP
+Referenced by Fill_Gen_histograms(), Fill_Resonance_histograms(), FillSystematicsUpDown(), FindResonance(), and initEvent()\&.
+.SS "bool specialAna::runOnData"
+
+.PP
+Definition at line 118 of file specialAna\&.hh\&.
+.PP
+Referenced by analyseEvent(), endEvent(), endJob(), FillControllHistos(), and initEvent()\&.
+.SS "vector< pxl::Particle* >* specialAna::S3ListGen"
+
+.PP
+Definition at line 171 of file specialAna\&.hh\&.
+.PP
+Referenced by Fill_Gen_Controll_histo(), GenSelector(), Get_Truth_match(), getPtHat(), initEvent(), and tail_selector()\&.
+.SS "pxl::Particle* specialAna::sel_lepton_nprompt"
+
+.PP
+Definition at line 199 of file specialAna\&.hh\&.
+.PP
+Referenced by calc_lep_fraction(), Fill_Resonance_histograms(), FillSystematicsUpDown(), FindResonance(), initEvent(), Leptonic_fraction_cut(), Make_DeltaPhi_emu(), Make_DeltaPhi_mutau(), Make_DeltaPhi_tauemu(), Make_DeltaPhi_tauMET(), Make_zeta_cut(), OppSign_charge(), and pT_muele_ratio_cut()\&.
+.SS "pxl::Particle* specialAna::sel_lepton_nprompt_corr"
+
+.PP
+Definition at line 201 of file specialAna\&.hh\&.
+.PP
+Referenced by Fill_Resonance_histograms(), FillSystematicsUpDown(), FindResonance(), initEvent(), and pT_mutau_ratio_cut()\&.
+.SS "pxl::Particle* specialAna::sel_lepton_prompt"
+
+.PP
+Definition at line 198 of file specialAna\&.hh\&.
+.PP
+Referenced by calc_lep_fraction(), Fill_Resonance_histograms(), FillSystematicsUpDown(), FindResonance(), initEvent(), Leptonic_fraction_cut(), Make_DeltaPhi_emu(), Make_DeltaPhi_mutau(), Make_DeltaPhi_tauemu(), Make_zeta_cut(), MT_cut(), OppSign_charge(), pT_muele_ratio_cut(), and pT_mutau_ratio_cut()\&.
+.SS "pxl::Particle* specialAna::sel_met"
+
+.PP
+Definition at line 200 of file specialAna\&.hh\&.
+.PP
+Referenced by Fill_Resonance_histograms(), FillSystematicsUpDown(), FindResonance(), initEvent(), Make_DeltaPhi_tauMET(), Make_zeta_cut(), and MT_cut()\&.
+.SS "pxl::Particle* specialAna::sel_part1_gen"
+
+.PP
+Definition at line 195 of file specialAna\&.hh\&.
+.PP
+Referenced by Fill_Gen_histograms(), and FindResonance()\&.
+.SS "pxl::Particle* specialAna::sel_part2_gen"
+
+.PP
+Definition at line 196 of file specialAna\&.hh\&.
+.PP
+Referenced by Fill_Gen_histograms(), and FindResonance()\&.
+.SS "vector< pxl::Particle* >* specialAna::TauList"
+
+.PP
+Definition at line 156 of file specialAna\&.hh\&.
+.PP
+Referenced by analyseEvent(), endEvent(), FillSystematicsUpDown(), initEvent(), and KinematicsSelector()\&.
+.SS "vector< pxl::Particle* >* specialAna::TauListGen"
+
+.PP
+Definition at line 167 of file specialAna\&.hh\&.
+.PP
+Referenced by endEvent(), and initEvent()\&.
 .SS "double specialAna::temp_event"
 
 .PP
-Definition at line 138 of file specialAna\&.hh\&.
+Definition at line 139 of file specialAna\&.hh\&.
 .PP
 Referenced by initEvent()\&.
 .SS "double specialAna::temp_ls"
 
 .PP
-Definition at line 137 of file specialAna\&.hh\&.
+Definition at line 138 of file specialAna\&.hh\&.
 .PP
 Referenced by initEvent()\&.
 .SS "double specialAna::temp_run"
 
 .PP
-Definition at line 136 of file specialAna\&.hh\&.
+Definition at line 137 of file specialAna\&.hh\&.
 .PP
 Referenced by initEvent()\&.
 .SS "unordered_set< string > specialAna::triggers"
 
 .PP
-Definition at line 205 of file specialAna\&.hh\&.
+Definition at line 206 of file specialAna\&.hh\&.
 .PP
 Referenced by endJob(), and TriggerSelector()\&.
 .SS "double specialAna::weight"
 
 .PP
-Definition at line 140 of file specialAna\&.hh\&.
+Definition at line 141 of file specialAna\&.hh\&.
 .PP
 Referenced by analyseEvent(), Fill_Gen_histograms(), Fill_N1_histos(), Fill_Particle_histos(), Fill_Resonance_histograms(), FillControllHistos(), initEvent(), and tail_selector()\&.
 
