(efficiencies) Included the trigger loop for the fill method

--- a/doc/doc_efficiencies/man/man3/specialAna.3
+++ b/doc/doc_efficiencies/man/man3/specialAna.3
@@ -662,7 +662,7 @@ Referenced by KinematicsSelector()\&.
 .PP
 Definition at line 933 of file specialAna\&.cc\&.
 .PP
-References MuonList\&.
+References m_trigger_string\&.
 .PP
 Referenced by analyseEvent()\&.
 .SS "void specialAna::FillControllHistos ()"
@@ -1218,7 +1218,7 @@ Referenced by initEvent(), and TriggerSelector()\&.
 .PP
 Definition at line 131 of file specialAna\&.hh\&.
 .PP
-Referenced by Create_trigger_effs(), and TriggerSelector()\&.
+Referenced by Create_trigger_effs(), Fill_trigger_effs(), and TriggerSelector()\&.
 .SS "vector< pxl::Particle* >* specialAna::METList"
 
 .PP
@@ -1246,7 +1246,7 @@ Definition at line 208 of file specialAna\&.hh\&.
 .PP
 Definition at line 155 of file specialAna\&.hh\&.
 .PP
-Referenced by analyseEvent(), endEvent(), Fill_trigger_effs(), FillSystematicsUpDown(), initEvent(), and KinematicsSelector()\&.
+Referenced by analyseEvent(), endEvent(), FillSystematicsUpDown(), initEvent(), and KinematicsSelector()\&.
 .SS "vector< pxl::Particle* >* specialAna::MuonListGen"
 
 .PP
