(efficiencies) Updated the .hh file for the coding style
Deleted the using namespace std, therefore many small changes to
go along with this change.

--- a/doc/doc_efficiencies/man/man3/specialAna.hh.3
+++ b/doc/doc_efficiencies/man/man3/specialAna.hh.3
@@ -1,4 +1,4 @@
-.TH "specialAna.hh" 3 "Mon Feb 2 2015" "RPV-LFV-Analyzer" \" -*- nroff -*-
+.TH "specialAna.hh" 3 "Tue Feb 3 2015" "RPV-LFV-Analyzer" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -13,6 +13,10 @@ specialAna.hh \-
 \fC#include <unordered_set>\fP
 .br
 \fC#include <fstream>\fP
+.br
+\fC#include <map>\fP
+.br
+\fC#include <vector>\fP
 .br
 \fC#include 'Pxl/Pxl/interface/pxl/core\&.hh'\fP
 .br
@@ -43,6 +47,7 @@ specialAna.hh \-
 .ti -1c
 .RI "class \fBspecialAna\fP"
 .br
+.RI "\fIclean up the header!!! \fP"
 .in -1c
 .SH "Author"
 .PP 
