--- a/doc/doc_efficiencies/man/man3/specialAna.cc.3
+++ b/doc/doc_efficiencies/man/man3/specialAna.cc.3
@@ -1,4 +1,4 @@
-.TH "specialAna.cc" 3 "Mon Feb 2 2015" "RPV-LFV-Analyzer" \" -*- nroff -*-
+.TH "specialAna.cc" 3 "Tue Feb 3 2015" "RPV-LFV-Analyzer" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -19,10 +19,10 @@ specialAna.cc \-
 
 .in +1c
 .ti -1c
-.RI "\fBm_dataPeriod\fP (cfg\&.GetItem< string >('General\&.DataPeriod'))"
+.RI "\fBm_dataPeriod\fP (cfg\&.GetItem< std::string >('General\&.DataPeriod'))"
 .br
 .ti -1c
-.RI "\fBm_channel\fP (cfg\&.GetItem< string >('RPV\&.channel'))"
+.RI "\fBm_channel\fP (cfg\&.GetItem< std::string >('RPV\&.channel'))"
 .br
 .ti -1c
 .RI "\fBconfig_\fP (cfg)"
@@ -50,11 +50,11 @@ specialAna.cc \-
 Definition at line 22 of file specialAna\&.cc\&.
 .PP
 References m_channel(), and m_dataPeriod()\&.
-.SS "m_channel (cfg\&.GetItem< string >'RPV\&.channel')"
+.SS "m_channel (cfg\&.GetItem< std::string >'RPV\&.channel')"
 
 .PP
 Referenced by config_()\&.
-.SS "m_dataPeriod (cfg\&.GetItem< string >'General\&.DataPeriod')"
+.SS "m_dataPeriod (cfg\&.GetItem< std::string >'General\&.DataPeriod')"
 
 .PP
 Referenced by config_()\&.
